@@ -2,7 +2,7 @@ Package: poweRlaw
 Type: Package
 Title: Fitting heavy tailed distributions: the poweRlaw package
 Version: 0.20.3
-Date: 2014-02-24
+Date: 2014-03-24
 Authors@R: person(given="Colin", family="Gillespie",
     email="csgillespie@gmail.com", role = c("aut", "cre"))
 Maintainer: Colin Gillespie <csgillespie@gmail.com>
@@ -12,6 +12,7 @@ Description: This package implements both the discrete and continuous maximum
     lower cut-off for the scaling region.
 URL: https://github.com/csgillespie/poweRlaw
 BugReports: https://github.com/csgillespie/poweRlaw/issues
+Roxygen: list(wrap = FALSE)
 Depends:
     R (>= 3.0.0),
     methods
