@@ -1,15 +1,15 @@
 % Generated by roxygen2 (4.0.0): do not edit by hand
-\name{bootstrap_p}
+\name{bootstrap}
 \alias{bootstrap}
 \alias{bootstrap_p}
 \alias{estimate_xmin}
 \alias{get_KS_statistic}
 \title{Estimates the lower bound (xmin)}
 \usage{
-bootstrap_p(m, xmins = NULL, pars = NULL, no_of_sims = 100, threads = 1,
+bootstrap(m, xmins = NULL, pars = NULL, no_of_sims = 100, threads = 1,
   data_max = 1e+05)
 
-bootstrap(m, xmins = NULL, pars = NULL, no_of_sims = 100, threads = 1,
+bootstrap_p(m, xmins = NULL, pars = NULL, no_of_sims = 100, threads = 1,
   data_max = 1e+05)
 
 get_KS_statistic(m)
