@@ -5,6 +5,7 @@ Version 0.20.3
  * Bug fix: When setting parameters in distributions, no longer a strict class comparison
  * Bug fix: Error when the length of xmins is 1 in estimate_xmin (https://github.com/csgillespie/poweRlaw/issues/20).
 Thanks to @linzhp
+ * Bug fix: Generating random numbers for the discrete power-law distribution wasn't quite right for small x values.  (https://github.com/csgillespie/poweRlaw/issues/24). Thanks to @wrhaas.
 
 Version 0.20.2
 --------------
